--- a/app/src/main/res/layout/activity_adapter_table_row.xml
+++ b/app/src/main/res/layout/activity_adapter_table_row.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="20dp"
-    tools:context=".view.table.ActivityTable">
+    tools:context=".business.table.adapter.AdapterTable">
 
     <TextView
         android:id="@+id/textViewRowTableAplicativo"
