--- a/app/src/main/res/layout/fragment_configuracao_aplicativos.xml
+++ b/app/src/main/res/layout/fragment_configuracao_aplicativos.xml
@@ -6,16 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".view.navigationDrawer.configuracoesAplicativos.ConfiguracaoAplicativosFragment">
 
-    <TextView
-        android:id="@+id/text_slideshow"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewConfiguracaoAplicativo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Configuração de Aplicativos"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
