--- a/app/src/main/res/layout/fragment_configuracao_sistema.xml
+++ b/app/src/main/res/layout/fragment_configuracao_sistema.xml
@@ -6,18 +6,57 @@
     android:layout_height="match_parent"
     tools:context=".view.navigationDrawer.configuracoesSistema.ConfiguracaoSistemaFragment">
 
-    <TextView
-        android:id="@+id/text"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Configuração de tempo do sistema"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewConfiguracaoSistemoTempoDiario"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="Tempo diário:" />
+
+            <EditText
+                android:id="@+id/editTextConfiguracaoSistemaDiario"
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="00:00"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewConfiguracaoSistemoTempoContinuo"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:text="Tempo continuo:" />
+
+            <EditText
+                android:id="@+id/editTextConfiguracaoSistemaContinuo"
+                android:layout_width="55dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="00:00"
+                android:textSize="14dp" />
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
