Removido (comentado código) o menu de configurações da barra de ações; Removido (comentado código) o item "Teste" do navigation drawer

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,11 +41,11 @@
         android:label="@string/menu_aplicativos"
         tools:layout="@layout/fragment_configuracao_aplicativos" />
 
-    <fragment
-        android:id="@+id/nav_teste"
-        android:name="com.dev.smartmonitor.view.navigationDrawer.teste.TesteFragment"
-        android:label="@string/menu_aplicativos"
-        tools:layout="@layout/fragment_teste" />
+<!--    <fragment-->
+<!--        android:id="@+id/nav_teste"-->
+<!--        android:name="com.dev.smartmonitor.view.navigationDrawer.teste.TesteFragment"-->
+<!--        android:label="@string/menu_aplicativos"-->
+<!--        tools:layout="@layout/fragment_teste" />-->
 
 
 
