--- a/app/src/main/res/layout/fragment_configuracao_sistema.xml
+++ b/app/src/main/res/layout/fragment_configuracao_sistema.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="265dp"
         android:layout_marginEnd="10dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,44 +19,62 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewConfiguracaoSistemoTempoDiario"
-                android:layout_width="140dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Tempo diário:" />
+                android:layout_marginEnd="20dp"
+                android:text="@string/tempo_uso_diario"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextConfiguracaoSistemaDiario"
-                android:layout_width="55dp"
+                android:layout_width="60sp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="00:00"
-                android:textSize="14dp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewConfiguracaoSistemoTempoContinuo"
-                android:layout_width="140dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Tempo continuo:" />
+                android:layout_marginEnd="20dp"
+                android:text="@string/tempo_uso_continuo"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/editTextConfiguracaoSistemaContinuo"
-                android:layout_width="55dp"
+                android:layout_width="60sp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="00:00"
-                android:textSize="14dp" />
+                android:textSize="18sp" />
         </LinearLayout>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButtonConfiguracaoSistemaHelp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_baseline_help_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
