--- a/app/src/main/res/layout/layout_adapter_table_row.xml
+++ b/app/src/main/res/layout/layout_adapter_table_row.xml
@@ -3,23 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="20dp"
+    android:layout_height="50dp"
     tools:context=".business.table.adapter.AdapterTable">
+
+
+    <ImageView
+        android:id="@+id/imageViewRowTableIcon"
+        android:layout_width="39dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10dp"
+        tools:src="@tools:sample/backgrounds/scenic" />
 
     <TextView
         android:id="@+id/textViewRowTableAplicativo"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_width="170dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="41dp"
-        android:layout_toStartOf="@+id/textViewRowTableTempo" />
+        android:layout_marginEnd="10dp"
+        android:layout_toStartOf="@+id/textViewRowTableTempo"
+        android:layout_toEndOf="@+id/imageViewRowTableIcon"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textViewRowTableTempo"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10dp" />
+        android:layout_marginEnd="10dp"
+        android:gravity="center_vertical"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
 </RelativeLayout>
