--- a/app/src/main/res/layout/layout_adapter_configuracao_aplicativo_row.xml
+++ b/app/src/main/res/layout/layout_adapter_configuracao_aplicativo_row.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"><![CDATA[
+    android:layout_height="70dp"><![CDATA[
     tools:context=".business.configuracao.aplicativo.adapter.adapter.AdapterConfiguracaoAplicativo">
 
     ]]>
@@ -29,7 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Figurinhas personalizadas para Whats app"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,10 +40,17 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/imageViewRowConfiguracaoAplicativoIcon"
+                    android:layout_width="40dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="25dp"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="15dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -48,44 +58,48 @@
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:text="@string/diario_app"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/editTextRowConfiguracaoAplicativoDiario"
-                        android:layout_width="55dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:gravity="center"
                         android:inputType="textPersonName"
                         android:text="00:00"
                         android:textColor="@android:color/black"
-                        android:textSize="14dp" />
+                        android:textSize="18sp" />
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginLeft="15dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textViewRowConfiguracaoAplicativoContinuo"
-                        android:layout_width="70dp"
+                        android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:text="@string/continuo_app"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/editTextRowConfiguracaoAplicativoContinuo"
-                        android:layout_width="55dp"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:gravity="center"
                         android:inputType="textPersonName"
                         android:text="00:00"
                         android:textColor="@android:color/black"
-                        android:textSize="14dp" />
+                        android:textSize="18sp" />
                 </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
